--- a/challenge 21 code/Starter_Code/Starter_Code.ipynb
+++ b/challenge 21 code/Starter_Code/Starter_Code.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4  100000-499999                      N   142590              1  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "4              1  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "4              1  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
        "Name: APPLICATION_TYPE, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "Name: CLASSIFICATION, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
        "[5 rows x 65 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,20 +916,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "x =application_numbers_df.drop(columns=['APPLICATION_TYPE_Other'])\n",
-    "y = application_numbers_df['APPLICATION_TYPE_Other']\n",
+    "x =application_numbers_df.drop(columns=['APPLICATION_TYPE_T8'])\n",
+    "y = application_numbers_df['APPLICATION_TYPE_T8']\n",
     "# Split the preprocessed data into a training and testing dataset\n",
     "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        0\n",
+       "1        0\n",
+       "2        0\n",
+       "3        0\n",
+       "4        0\n",
+       "        ..\n",
+       "34294    0\n",
+       "34295    0\n",
+       "34296    0\n",
+       "34297    0\n",
+       "34298    0\n",
+       "Name: APPLICATION_TYPE_T8, Length: 34299, dtype: uint8"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
